Adds error message for lineups without a stack

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,6 +21,8 @@
 	<body>
 		<div class="row">
 			<div class="col-lg-12">
+				<div id="errors"></div>
+
 				<h4>Player Percentages</h4>
 
 				<div id="player-percentages-container" style="width:100%; padding-right:30px; height: 1500px"></div>
