--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,6 +23,12 @@
 			<div class="col-lg-12">
 				<div id="errors"></div>
 
+				<h4>Stack Percentages</h4>
+
+				<strong>Daily Buy In:</strong> $<span id="daily-buy-in"></span>
+
+				<div id="stack-percentages-container" style="width:100%; padding-right:30px"></div>
+
 				<h4>Player Percentages</h4>
 
 				<div id="player-percentages-container" style="width:100%; padding-right:30px; height: 1500px"></div>
