Adds daily buy in target

--- a/options.html
+++ b/options.html
@@ -13,6 +13,10 @@
 
 <body>
 
+	<h3><strong>Daily Buy In Target</strong></h3>
+
+	Daily Buy In Target: <input type="number" name="daily-buy-in-target" id="daily-buy-in-target"><br>	
+
 	<h3><strong>Lineup Buy Ins</strong></h3>
 
 	Event 1: <input type="number" name="lineup-buy-in-0" id="lineup-buy-in-0"><br>
