Adds lineups to show to options

--- a/options.html
+++ b/options.html
@@ -34,9 +34,19 @@
 
 	<textarea id="csv-input" style="width: 500px; height: 100px"></textarea>
 
+	<h3><strong>Lineups to Show</strong></h3>
+
+	<select id="lineups-to-show">
+	  	<option value="upcoming-and-live">Upcoming and Live</option>
+	  	<option value="upcoming">Upcoming</option>
+	  	<option value="live">Live</option>
+	  	<option value="complete">Complete</option>
+	</select>
+
 	<div id="status" style="margin-top: 10px"></div>
 	<button id="save" style="margin-top: 10px">Save</button>
 
 	<script src="options.js"></script>
+
 </body>
 </html>
