Sorts lineups by fpts and shows the fpts on popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,6 +23,8 @@
 			<div class="col-lg-12">
 				<div id="errors"></div>
 
+				<div id="lowest-lineup-fpts"></div>
+
 				<h4>Stack Percentages</h4>
 
 				<strong>Daily Buy In:</strong> $<span id="daily-buy-in"></span>
