--- a/options.html
+++ b/options.html
@@ -22,14 +22,6 @@
 	Event 1: <input type="number" name="lineup-buy-in-0" id="lineup-buy-in-0"><br>
 	Event 2: <input type="number" name="lineup-buy-in-1" id="lineup-buy-in-1"><br>
 
-	<h3><strong>Second Event Stacks</strong></h3>
-
-	Team 1: <input type="text" name="team-0" id="team-0"><br>
-	Team 2: <input type="text" name="team-1" id="team-1"><br>
-	Team 3: <input type="text" name="team-2" id="team-2"><br>
-	Team 4: <input type="text" name="team-3" id="team-3"><br>
-	Team 5: <input type="text" name="team-4" id="team-4"><br>
-
 	<h3><strong>CSV Input</strong></h3>
 
 	<textarea id="csv-input" style="width: 500px; height: 100px"></textarea>
@@ -42,6 +34,21 @@
 	  	<option value="live">Live</option>
 	  	<option value="complete">Complete</option>
 	</select>
+
+	<h3>Check to See if Player is in the Team's Lineup</h3>
+
+	<select id="lineup-check">
+	  	<option value="yes">Yes</option>
+	  	<option value="no">No</option>
+	</select>
+
+	<h3><strong>Second Event Stacks</strong></h3>
+
+	Team 1: <input type="text" name="team-0" id="team-0"><br>
+	Team 2: <input type="text" name="team-1" id="team-1"><br>
+	Team 3: <input type="text" name="team-2" id="team-2"><br>
+	Team 4: <input type="text" name="team-3" id="team-3"><br>
+	Team 5: <input type="text" name="team-4" id="team-4"><br>
 
 	<div id="status" style="margin-top: 10px"></div>
 	<button id="save" style="margin-top: 10px">Save</button>
