Distinguishes between two live slates on the same day

--- a/options.html
+++ b/options.html
@@ -13,6 +13,9 @@
 
 <body>
 
+	<div id="status" style="margin-top: 10px"></div>
+	<button id="save" style="margin-top: 10px">Save</button>
+
 	<h3><strong>Daily Buy In Target</strong></h3>
 
 	Daily Buy In Target: <input type="number" name="daily-buy-in-target" id="daily-buy-in-target"><br>	
@@ -35,6 +38,10 @@
 	  	<option value="complete">Complete</option>
 	</select>
 
+	<h3><strong>Show Lineups After a Particular Time</strong></h3>
+
+	Show Lineups After This Time: <input type="text" name="show-lineups-after" id="show-lineups-after"><br>
+
 	<h3>Check to See if Player is in the Team's Lineup</h3>
 
 	<select id="lineup-check">
@@ -49,9 +56,6 @@
 	Team 3: <input type="text" name="team-2" id="team-2"><br>
 	Team 4: <input type="text" name="team-3" id="team-3"><br>
 	Team 5: <input type="text" name="team-4" id="team-4"><br>
-
-	<div id="status" style="margin-top: 10px"></div>
-	<button id="save" style="margin-top: 10px">Save</button>
 
 	<script src="options.js"></script>
 
