--- a/popup/popup.html
+++ b/popup/popup.html
@@ -23,7 +23,7 @@
 			<div class="col-lg-12">
 				<div id="errors"></div>
 
-				<div id="lowest-lineup-fpts"></div>
+				<!-- <div id="lowest-lineup-fpts"></div> -->
 
 				<h4>Stack Percentages</h4>
 
