--- a/options.html
+++ b/options.html
@@ -38,6 +38,12 @@
 	  	<option value="complete">Complete</option>
 	</select>
 
+	<h3><strong>Show Lineups on a Particular Date</strong></h3>
+
+	Show Lineups on This Date: <input type="text" name="show-lineups-on-this-date" id="show-lineups-on-this-date"><br>
+
+	Leave blank to show all dates. Format date like this '05/22/2016'.
+
 	<h3><strong>Show Lineups After a Particular Time</strong></h3>
 
 	Show Lineups After This Time: <input type="text" name="show-lineups-after" id="show-lineups-after"><br>
