--- a/popup/popup.html
+++ b/popup/popup.html
@@ -31,9 +31,13 @@
 
 				<div id="stack-percentages-container" style="width:100%; padding-right:30px"></div>
 
-				<h4>Player Percentages</h4>
+				<h4>Pitcher Percentages</h4>
 
-				<div id="player-percentages-container" style="width:100%; padding-right:30px; height: 1500px"></div>
+				<div id="pitcher-percentages-container" style="width:100%; padding-right:30px"></div>
+
+				<h4>Hitter Percentages</h4>
+
+				<div id="hitter-percentages-container" style="width:100%; padding-right:30px; height: 1500px"></div>
 			</div>
 		</div>
 	</body>
